# claudebridge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.txt  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
agentbridge/: __init__.py  config.py  dashboard.py  models.py  pool.py  server.py
agentbridge/templates/dashboard/: chat.html  detail.html  page.html  pool.html  requests.html
claude_code_bridge/: __init__.py  client.py  image_utils.py  model_mapping.py  models.py  pool.py  server.py  session_logger.py  url_utils.py
claude_proxy/: __init__.py  client.py  server.py
claudebridge/: __init__.py  dashboard.py  dashboard_routes.py  dashboard_state.py  image_utils.py  model_mapping.py  models.py  pool.py  server.py  session_logger.py
claudebridge/templates/dashboard/: active.html  detail.html  page.html  pool.html  recent.html  requests.html
docs/plans/: 2026-02-14-dashboard-design.md  2026-02-14-dashboard-implementation.md
image-assets/: manifest.json
image-assets/web-seo/: site.webmanifest
scripts/: dashboard_load_test.py
tests/: conftest.py  test_client.py  test_config.py  test_dashboard.py  test_dashboard_routes.py  test_dashboard_state.py  test_image_utils.py  test_model_mapping.py  test_models.py  test_pdf.py  test_pool.py  test_server.py  test_session_logger.py  test_url_utils.py  test_vision.py
