[project]
name = "py-claudebridge"
version = "0.1.7"
description = "Bridge OpenAI tools to Claude Code SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "tsilva"}]
requires-python = ">=3.12"
keywords = ["claude", "openai", "api", "bridge", "llm", "anthropic", "claude-code", "fastapi", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "fpdf>=1.7.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fpdf2>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/tsilva/claudebridge"
Repository = "https://github.com/tsilva/claudebridge"
Issues = "https://github.com/tsilva/claudebridge/issues"

[project.scripts]
claudebridge = "claudebridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claudebridge"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: mark test as unit test (no server required)",
    "integration: mark test as integration test (requires running server)",
]
